# bose

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: bose_client.rs  main.rs
