[package]
name = "bose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive", "env"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }

