[package]
name = "bose"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.4.18", features = ["derive", "env"] }
bose_soundtouch = "2.1.1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
